--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_GSCRIPT_URL="https://script.google.com/macros/s/xxxxxxxx/exec"
+VITE_API_BASE="https://admin-panel-portofolio.onrender.com"
