added form support

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_GSCRIPT_URL="https://script.google.com/macros/s/xxxxxxxx/exec"
 VITE_API_BASE="https://admin-panel-portofolio.onrender.com"
+
+# Apps Script URL for contact form (used in production)
+VITE_APPS_SCRIPT_URL="https://script.google.com/macros/s/AKfycbxCaEQWft1iItNEauWhgqTTCOCRJ7ZdtY9j-ETE0tt2gESRjzFxVDGTqMzryiQiimus/exec"
+
+# When developing locally, Vite uses a proxy; keep this true to use `/api/contact` in dev.
