--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     },
     "routes": [
         {
+            "src": "/api/contact",
+            "dest": "/api/contact.js"
+        },
+        {
             "src": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|ico|webp|woff|woff2|eot|ttf)$",
             "headers": {
                 "cache-control": "public, max-age=31536000, immutable"
