--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,11 @@
             "dest": "/api/contact.js"
         },
         {
-            "src": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|ico|webp|woff|woff2|eot|ttf)$",
+            "src": "/manifest.json",
+            "dest": "/manifest.json"
+        },
+        {
+            "src": "/(.*)\\.(js|css|png|jpg|jpeg|gif|svg|ico|webp|woff|woff2|eot|ttf|json)$",
             "headers": {
                 "cache-control": "public, max-age=31536000, immutable"
             }
